<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SHOP</string>
    <string name="link" translatable="false">http://192.168.137.201:8080/api/</string>
    <string name="imagelink" translatable="false">http://192.168.137.201:8080/</string>
    <string name="termsand" translatable="false"><![CDATA[<font color=\'#0000F7\'>terms And conditions</font>]]></string>
    <string name="txt_regdesc" translatable="false">Lorem ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="terms_condition_filename" translatable="false">tnc.html</string>
    <string name="about_us" translatable="false">aboutus.html</string>
    <string name="help_center1" translatable="false">helpcenter.html</string>
    <string name="orderstats" translatable="false">Order Status</string>
    <string name="orderdetail" translatable="false">Order Details</string>
    <string name="item"  translatable="false">ITEM</string>
    <string name="shipping_address" translatable="false">Shipping Address</string>
    <string name="billing_address" translatable="false">Billing Address</string>
    <string name="description" translatable="false">Description</string>
    <string name="additional_information" translatable="false">Additional Information</string>
    <string name="review" translatable="false">Reviews</string>
    <string name="text" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="locationfirst" translatable="false">Select location First</string>
    <string name="set_your_location_to_start_exploring_restaurants_around_you" translatable="false">Set your location to start exploring \n restaurants around you</string>
    <string name="hi_nice_to_meet_you" translatable="false">Hi, nice to meet you!</string>
    <string name="loading" tools:ignore="MissingTranslation">loading..</string>
    <string name="need_login_for_wish" translatable="false">You need to login first. Would you like to login now ?</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="no_data" translatable="false">No Products Found</string>
    <string name="set_yor_profile" translatable="false">Set your profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="report_issue" translatable="false">Report Issue</string>
    <string name="help_center" translatable="false">Help Center</string>
    <string name="terms_amp_condition" translatable="false"><![CDATA[Terms & Condition]]></string>
    <string name="about_shop" translatable="false">About Shop</string>
    <string name="shoping_categories" translatable="false">Shoping Categories</string>
    <string name="update_success" translatable="false">Update Success</string>
    <string name="facebook_app_id" translatable="false">1343802689133822</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1343802689133822</string>
    <string name="email_error" translatable="false">Enter Valid Email</string>
    <string name="default_notification_channel_id" translatable="false">123</string>
    <string name="login_warning" translatable="false">U need To Login First</string>
    <string name="something_wrong" translatable="false">Something Wrong</string>
    <string name="sort_by" translatable="false">Sort By</string>
    <string name="select_optionfirst" translatable="false">Select Options First</string>
    <string name="moreinfo" translatable="false">Enter MoreInfo</string>
    <string name="report_an_error" translatable="false">Report An Error</string>
    <string name="address" translatable="false">Address</string>
    <string name="mrp_price" translatable="false">Author selling product more then MRP price</string>
    <string name="product_duplicate" translatable="false">Product is Duplicate</string>
    <string name="product_weong" translatable="false">Author showing wrong information of product </string>
    <string name="this_place_has_closed_down" translatable="false">This Place has Closed down</string>
    <string name="menu_is_incorrect_out_of_order" translatable="false">Menu is Incorrect/out of order</string>
    <string name="more_info" translatable="false">More Info</string>
    <string name="search" translatable="false">Search</string>
    <string name="pay_failure" translatable="false">An extremely unlikely failure occurred:</string>
    <string name="shop_payment" translatable="false">Shop Peyment</string>
    <string name="stripe_key" translatable="false">pk_test_yFUNiYsEESF7QBY0jcZoYK9j00yHumvXho</string>
    <string name="paypalclient_id" translatable="false">AaT793pjARjOWkXpWaOd45lGARUMRN9pr8seE5c-AJpQBSJS1H6Z44rUPSEWYPpO7J7iF1Hu0N-MqnPx</string>
    <string name="show_admmob_ads" translatable="false">no</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="show_facebook_ads" translatable="false">no</string>
    <string name="facebook_interstial" translatable="false">240708983477305_245272039687666</string>
    <string name="facebook_native_id" translatable="false">240708983477305_245209643027239</string>
    <string name="notification_channel_id" translatable="false">123</string>
    <string name="no_wishlist" translatable="false">No wishList Found</string>
    <string name="save_upto" translatable="false">Save up to</string>
    <string name="category" translatable="false">Category</string>
    <string name="dolar" translatable="false">$</string>
    <string name="my_account" translatable="false">Profile</string>
    <string name="back" translatable="false">Back</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="save" translatable="false">Save</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="code" translatable="false">Code</string>
    <string name="adress" translatable="false">Address</string>
    <string name="phone" translatable="false">Phone No</string>
    <string name="select_phone" translatable="false">Enter phone no</string>
    <string name="select_address" translatable="false">Enter Address</string>
    <string name="enterfname" translatable="false">Enter First Name</string>
    <string name="reviews" translatable="false">Reviews</string>
    <string name="cart_empty" translatable="false">Cart is Empty</string>
    <string name="valid_coupan" translatable="false">Please Enter Valid Coupan</string>
    <string name="are_sure_remove" translatable="false">Are sure You want to remove item</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="proceed_to_checkout" translatable="false">proceed To Checkout</string>
    <string name="_0_0" translatable="false">$0.0</string>
    <string name="total" translatable="false">Total</string>
    <string name="discount" translatable="false">Discount</string>
    <string name="delievery_charge" translatable="false">Delievery Charge</string>
    <string name="subtotal" translatable="false">Subtotal</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="coupan_code" translatable="false">Coupan Code</string>
    <string name="no_offers" translatable="false">No Offers</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="add_wishlist"  translatable="false" >Add to wishlist successfully</string>
    <string name="remove_wishlist"  translatable="false">Remove from wishlist successfully</string>
    <string name="try_again"  translatable="false">Sorry Try Again</string>
    <string name="add_to_cart"  translatable="false">Add to cart</string>
    <string name="shop_now"  translatable="false">Shop now</string>
    <string name="popular_item"  translatable="false">Popular Item</string>
    <string name="low_to_high"  translatable="false">price low to high</string>
    <string name="high_to_low" translatable="false">price high to low</string>
    <string name="latest"  translatable="false">latest</string>
    <string name="refine"  translatable="false">Refine</string>
    <string name="clear_all"  translatable="false">Clear All</string>
    <string name="brand"  translatable="false">Brand</string>
    <string name="colors_sort_by"  translatable="false">Colors Sort By</string>
    <string name="size_sort_by"  translatable="false">Size Sort By</string>
    <string name="price_sort_by"  translatable="false">Price Sort By</string>
    <string name="review_sort_by"  translatable="false">Review Sort By</string>
    <string name="show_result"  translatable="false">Show result</string>
    <string name="location"  translatable="false">Location</string>
    <string name="enter_password"  translatable="false">Enter Password</string>
    <string name="enter_email"  translatable="false">Enter Email</string>
    <string name="invalid_email"  translatable="false">Invalid Email</string>
    <string name="name"  translatable="false">Email</string>
    <string name="password"  translatable="false">Password</string>
    <string name="forgot_password"  translatable="false">Forgot Password ?</string>
    <string name="login"  translatable="false">Login</string>
    <string name="dont_have_account"  translatable="false">Do not have Account ?</string>
    <string name="register"  translatable="false">Register</string>
    <string name="order_no"  translatable="false">Order No :</string>
    <string name="items"  translatable="false">Items</string>
    <string name="bill"  translatable="false">Bill :</string>
    <string name="eta"  translatable="false">ETA</string>
    <string name="my_orders"  translatable="false">My Orders</string>
    <string name="order_date"  translatable="false">Order Date</string>
    <string name="order_id"  translatable="false">Order ID</string>
    <string name="offf"  translatable="false">Off</string>
    <string name="new_price"  translatable="false">New Price</string>
    <string name="offer"   translatable="false">Offer</string>
    <string name="offers"  translatable="false">Offers</string>
    <string name="best_selling_products" translatable="false" >Best selling products</string>
    <string name="see_all" translatable="false">See all</string>
    <string name="accept_terms" translatable="false">Accept Terms and Conditions</string>
    <string name="password_error" translatable="false">Password is mismatch</string>
    <string name="enter_mobile" translatable="false">Enter Phone Number</string>
    <string name="enter_name" translatable="false">Enter Name</string>
    <string name="register_success" translatable="false">Register Success</string>
    <string name="current_password" translatable="false">Current Password</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="sponsored" translatable="false">Sponsored</string>
    <string name="are_you_sure_you_want_to_exit" translatable="false">Are you sure you want to exit?</string>
    <string name="enter_billing_address" translatable="false">Enter Billing Pincode</string>
    <string name="enter_billing_town" translatable="false">Enter Billing Town</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="forgot_passwords" translatable="false">Forgot Password</string>
    <string name="retrieve_your_password" translatable="false">Retrieve Your Password</string>
    <string name="submit_txt" tools:ignore="MissingTranslation">Submit</string>
</resources>