<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:background="@drawable/header_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/btn_back"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/report_an_error"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="#9D9D9D"
            tools:ignore="Suspicious0dp" />

        <manhnguyen.shopping.utils.MyCheckBox
            android:id="@+id/chk_phonnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/product_duplicate"
            android:textColor="@color/black"
            android:theme="@style/checkstyle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="#9D9D9D" />

        <manhnguyen.shopping.utils.MyCheckBox
            android:id="@+id/chk_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/mrp_price"
            android:textColor="@color/black"
            android:theme="@style/checkstyle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="#9D9D9D" />

        <manhnguyen.shopping.utils.MyCheckBox
            android:id="@+id/chk_placeclosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/product_weong"
            android:textColor="@color/black"
            android:theme="@style/checkstyle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:background="#9D9D9D" />

        <manhnguyen.shopping.utils.MyCheckBox
            android:id="@+id/chk_menuisincorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/menu_is_incorrect_out_of_order"
            android:textColor="@color/black"
            android:visibility="gone"
            android:theme="@style/checkstyle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:background="#9D9D9D" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/opensans_semibold"
            android:hint="@string/more_info"
            android:singleLine="true"
            android:textColor="#9D9D9D"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:background="#01DF74"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>