<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="15dp"
    android:background="@drawable/dialogbackg">

    <RelativeLayout
        android:id="@+id/relative_layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialogbackg">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_settingtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/warning"
                android:textColor="#000"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textAlignment="center"
            android:textColor="@color/light_greay"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rele_close"
                style="@style/MaterialDialog.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/no"
                android:textColor="#fff"
                app:icon="@drawable/ic_clear_black_24dp"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rele_submit"
                style="@style/MaterialDialog.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/yes"
                android:textColor="#fff"
                app:icon="@drawable/ic_check_black_24dp"
                app:iconGravity="textStart" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>